# test-risingwave

./: consume.py  docker-compose.yml  doris_sqlalchemy.py  pubsub.py  pyproject.toml  rw_sqlalchemy.py
.dlt/: config.toml
jaffle_shop/: .user.yml  dbt_project.yml  profiles.yml
jaffle_shop/macros/: flattened_json_column.sql
jaffle_shop/models/marts/: user_analytics.sql
jaffle_shop/models/staging/: products.sql  user_events.sql  user_events_source.sql  users.sql
